<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

     <ImageButton
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/rgColors"
         android:layout_alignTop="@+id/imageView2"
         android:layout_marginLeft="25dp"
         android:contentDescription="@string/btImage1"
         android:src="@android:drawable/btn_dialog" />

     <ImageButton
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/rgColors"
         android:layout_marginRight="27dp"
         android:layout_marginTop="62dp"
         android:contentDescription="@string/btImage2"
         android:src="@android:drawable/btn_dialog" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/imageView1"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/imageView2"
         android:layout_below="@+id/button1"
         android:text="@string/txView" />

     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/rgColors"
         android:layout_centerVertical="true"
         android:orientation="horizontal" >

         <ToggleButton
             android:id="@+id/tb1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textOn="@string/btToggleOn"
             android:textOff="@string/btToggleOff" 
             />

         <ToggleButton
             android:id="@+id/tb2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textOn="@string/btToggleOn"
             android:textOff="@string/btToggleOff"
              />

         <ToggleButton
             android:id="@+id/tb3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
			 android:textOn="@string/btToggleOn"
             android:textOff="@string/btToggleOff"
             />

     </LinearLayout>

     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/linearLayout"
         android:layout_marginLeft="40dp"
         android:text="@string/btAlterar" />

     <RadioGroup
         android:id="@+id/rgColors"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="21dp"
         android:orientation="horizontal" >

         <RadioButton
             android:id="@+id/btRadioRed"
             android:checked="true"
             android:text="@string/btRadioRed" />

         <RadioButton
             android:id="@+id/btRadioBlue"
             android:text="@string/btRadioBlue" />

         <RadioButton
             android:id="@+id/btRadioYellow"
             android:text="@string/btRadioYellow" />
     </RadioGroup>

</RelativeLayout>